crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__interpolated_string_with_only_a_variable_retains_it.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:25
    v1 = const.str "hello"  ; string
    ; stmt s1 @5:5-5:22
    retain v1
    release v1
    release v0
    release v1
    return
}
