crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__interpolated_string_with_text_on_both_sides_is_one_concat.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:28
    v1 = const.str "middle"  ; string
    ; stmt s1 @5:5-5:32
    v2 = const.str "pre"  ; string
    v3 = const.str " post"  ; string
    v4 = concat v2, v1, v3  ; string
    release v2
    release v3
    release v1
    release v4
    release v0
    return
}
