crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__new_with_a_resolved_constructor.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn make(object) -> object {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:23
    v1 = const.int 1  ; int
    v2 = new Foo via Foo::constructor(v1) ! bb1  ; object
    release v0
    return v2
  bb1:
    release v0
    propagate "make() at t.nvs:7"
}
