crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__new_with_no_declared_constructor.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn make(object) -> object {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:22
    v1 = new Foo() ! bb1  ; object
    release v0
    return v1
  bb1:
    release v0
    propagate "make() at t.nvs:5"
}
