crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__not_composes_with_a_short_circuit_and.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bool, bool) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    v2 = param 2  ; bool
    ; stmt s0 @4:5-4:24
    v3 = const.bool false  ; bool
    branch v1 -> bb1 (e0), bb2 (e1)
  bb1:
    jump bb2
  bb2:
    v4 = phi [bb0: v3, bb1: v2]  ; bool
    v5 = not v4  ; bool
    release v0
    return v5
}
