crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__not_converts_a_non_bool_operand_through_the_truthy_table_then_negates.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, string) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    ; stmt s0 @4:5-4:16
    v2 = helper.str_truthy v1  ; bool
    v3 = not v2  ; bool
    release v1
    release v0
    return v3
}
