crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__or_short_circuits_to_a_phi.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bool, bool) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    v2 = param 2  ; bool
    ; stmt s0 @4:5-4:21
    v3 = const.bool true  ; bool
    branch v1 -> bb2 (e0), bb1 (e1)
  bb1:
    jump bb2
  bb2:
    v4 = phi [bb0: v3, bb1: v2]  ; bool
    release v0
    return v4
}
