crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__passing_a_bytes_local_as_a_call_argument_retains_it.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bytes) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bytes
    ; stmt s0 @4:5-4:27
    v2 = class.of v0  ; classdesc
    retain v1
    v3 = call T::take(this: v2, v1) ! bb1  ; int
    release v1
    release v0
    return v3
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:4"
}
